loopdowhile.LoopDoWhile.scala.error
Compilation error:
LoopDoWhile:2: error: not found: value avancer
  avancer;
  ^